--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,10 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/PintLabs/Pintlabs_Service_Untappd.git"
-        }
-    ],
     "require": {
         "php": "^7.1.3",
-        "PintLabs/Pintlabs_Service_Untappd": "*@dev",
         "ahuggins/open-on-make": "^0.0.16",
         "bugsnag/bugsnag-laravel": "^2.0",
-        "fabpot/goutte": "^3.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
@@ -30,8 +22,7 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories",
-            "vendor/Pintlabs/Pintlabs_Service_Untappd/library/Pintlabs/Service/"
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
