--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "tightenco/ziggy": "^0.6.6",
         "weidner/goutte": "^1.0"
     },
     "require-dev": {
