--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "ahuggins/open-on-make": "^0.0.16",
+        "beyondcode/laravel-self-diagnosis": "^0.3.0",
         "bugsnag/bugsnag-laravel": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
