added cache busting

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6e3540920faf56c92b57",
+    "/css/app.css": "/css/app.css?id=f89c49e1133924e81187"
 }
