fix js error, import missing packages

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "bugsnag-js": "^4.7.2",
     "bugsnag-vue": "^1.0.1",
-    "v-tooltip": "^2.0.0-rc.33"
+    "es6-promise": "^4.2.4",
+    "v-tooltip": "^2.0.0-rc.33",
+    "vue-sweetalert2": "^1.4.2"
   }
 }
