--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
 language: php
+
+php:
+  - 7.0
+
+before_script:
+  - cp .env.travis .env
+  - composer self-update
+  - composer install --no-interaction
+
+script:
+  - php artisan key:generate
+  - vendor/bin/phpunit
