--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - cp .env.travis .env
   - composer self-update
   - composer install --no-interaction
+  - mysql -e 'create database homestead_test;'
 
 script:
   - php artisan key:generate
