Smooth scroll to bars when clicking on a beer. Closes #22

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bugsnag-js": "^4.7.2",
     "bugsnag-vue": "^1.0.1",
     "es6-promise": "^4.2.4",
+    "smoothscroll-polyfill": "^0.4.3",
     "v-tooltip": "^2.0.0-rc.33",
     "vue-sweetalert2": "^1.4.2"
   }
