--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-event-projector": "^1.0.0",
         "tightenco/ziggy": "^0.6.6",
         "weidner/goutte": "^1.0"
     },
