--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
 - 7.2
 before_script:
 - cp .env.travis .env
+- mysql -e 'create database tests;'
 - composer self-update
 - composer install --no-interaction
 - mysql -e 'create database homestead_test;'
