added mysql to travis. maybe.

--- a/.env.travis
+++ b/.env.travis
@@ -4,7 +4,7 @@ APP_DEBUG=true
 
 DB_CONNECTION=testing
 DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=
+DB_TEST_PASSWORD=secret
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
