--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
 language: php
 php:
 - 7.2
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+      - mysql-client
+before_install:
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('secret') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade -u root -psecret
+  - sudo service mysql restart
+
 before_script:
 - cp .env.travis .env
 - composer self-update
