--- a/.env.travis
+++ b/.env.travis
@@ -3,8 +3,8 @@ APP_KEY=SomeRandomString
 APP_DEBUG=true
 
 DB_CONNECTION=testing
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=secret
+DB_TEST_USERNAME=travis
+DB_TEST_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
