--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 php:
 - 7.2
+services:
+  - mysql
 addons:
   apt:
     sources:
@@ -12,7 +14,8 @@ before_install:
   - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('secret') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
   - sudo mysql_upgrade -u root -psecret
   - sudo service mysql restart
-
+dist: trusty
+sudo: required
 before_script:
 - cp .env.travis .env
 - composer self-update
