--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,14 @@
     },
     "require-dev": {
         "ahuggins/open-on-make": "^0.0.23",
+        "barryvdh/laravel-debugbar": "^3.2",
+        "beyondcode/laravel-dump-server": "~1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "laracasts/generators": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "beyondcode/laravel-dump-server": "~1.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
