--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bugsnag-js": "^4.7.2",
     "bugsnag-vue": "^1.0.1",
     "es6-promise": "^4.2.4",
-    "slug": "^0.9.1",
+    "slugify": "^1.3.1",
     "smoothscroll-polyfill": "^0.4.3",
     "v-tooltip": "^2.0.0-rc.33",
     "vue-router": "^3.0.1",
