--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_script:
 - composer self-update
 - composer install --no-interaction
 - mysql -e 'create database homestead_test;'
+- npm install
+- npm run production
 script:
 - php artisan key:generate
 - vendor/bin/phpunit
