--- a/package.json
+++ b/package.json
@@ -11,23 +11,27 @@
   },
   "devDependencies": {
     "axios": "^0.18",
-    "bootstrap": "^4.0.0",
-    "popper.js": "^1.12",
+    "bootstrap": "^4.2.1",
     "cross-env": "^5.1",
     "jquery": "^3.2",
-    "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
-    "vue": "^2.5.7"
+    "popper.js": "^1.14.6",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.3",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.21",
+    "vue-template-compiler": "^2.5.21"
   },
   "dependencies": {
     "bugsnag-js": "^4.7.2",
     "bugsnag-vue": "^1.0.1",
     "es6-promise": "^4.2.4",
-    "slugify": "^1.3.1",
+    "laravel-mix": "^4.0.13",
+    "slugify": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.3",
     "v-tooltip": "^2.0.0-rc.33",
-    "vue-router": "^3.0.1",
-    "vue-sweetalert2": "^1.4.2",
-    "vuejs-datepicker": "^1.5.2"
+    "vue-router": "^3.0.2",
+    "vue-sweetalert2": "^1.6.3",
+    "vuejs-datepicker": "^1.5.4"
   }
 }
